# python-auth-library

./: .gitignore  README.md  pyproject.toml
docs/: auth-flow.md
example/: .env.example  app.py
example/templates/: admin.html  index.html  profile.html
src/keycloak_flask_auth/: __init__.py  auth.py  decorators.py  routes.py  user.py
src/python_auth_library/: __init__.py  auth.py  routes.py  user.py
