[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "keycloak-flask-auth"
version = "0.1.0"
description = "Drop-in Keycloak (OIDC) authentication for Flask apps, powered by Authlib."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Team" }]
keywords = ["flask", "keycloak", "oidc", "oauth2", "authentication", "authlib"]
dependencies = [
    "Flask>=2.2",
    "Authlib>=1.3",
    "requests>=2.28",
]

[project.optional-dependencies]
example = ["python-dotenv>=1.0"]

[tool.setuptools.packages.find]
where = ["src"]
